# taxmusr

./: .env.example  README.md  pyproject.toml
datasets/: home_office_deduction_cases.jsonl  joint_assessment_cases.jsonl
resources/: rules.json
results/: home_office_deduction_cases.jsonl  joint_assessment_cases.jsonl
taxmusr/: cli.py  evaluate.py  generate.py
taxmusr/core/: chat_model.py  generator.py  schemas.py
taxmusr/domains/: base.py  formatter.py
taxmusr/domains/home_office_deduction/: domain.py  logic.py  prompts.py  rules.py
taxmusr/domains/joint_assessment/: domain.py  logic.py  prompts.py  rules.py
taxmusr/workflows/: base.py
